# bedrock-bridge

./: ARCHITECTURE.md  COMPATIBILITY.md  CONTRIBUTING.md  IAM.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: lint.yml
bedrock_bridge/: cli.py  server.py  translate.py
docs/: architecture.md  iam.md  logging.md
scripts/: README.md  compat_matrix.py  e2e_grade.py  matrix_e2e.py  probe_tool_use.py
scripts/git-hooks/: pre-commit
tests/: test_logging.py  test_server_errors.py  test_translate.py
tests/functional/: conftest.py  test_live_bridge.py
