[project]
name = "bedrock-bridge"
description = "Local proxy to run Claude Code with any Bedrock model"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "starlette>=0.40",
    "uvicorn>=0.34",
    "boto3>=1.35",
]

[project.scripts]
bedrock-bridge = "bedrock_bridge.cli:main"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "bedrock_bridge.__version__"}
